// 🏨 Ruqq - Nueva Arquitectura de Base de Datos (Modelo OTA Estándar)
// Compatible con dbdiagram.io - Modelo de Calendario Diario
// Basado en evidencia técnica de Booking.com, Airbnb y OTAs principales

Project ruqq_hotel_system {
  database_type: 'PostgreSQL'
  Note: '''
  Sistema Ruqq - Modelo OTA Estándar
  
  Arquitectura basada en calendario diario (un registro por día)
  Compatible 100% con APIs de Booking.com, Airbnb, Expedia
  
  Principios de Diseño:
  - Un registro por día en daily_room_rates (como OTAs reales)
  - Clave compuesta: (room_type_id, date)  
  - Queries simples: WHERE date BETWEEN startDate AND endDate
  - Performance optimizada para cotizaciones masivas
  '''
}

//========================================
// ENTIDADES CORE - MANTENER
//========================================

Table "users" {
  "id" uuid [pk, not null, default: `public.uuid_generate_v4()`]
  "uid" uuid [not null]
  "email" text [unique, not null]
  "username" varchar(100) [unique, not null]
  "password_hash" varchar(255) [not null]
  "first_name" varchar(100)
  "last_name" varchar(100)
  "is_active" boolean [default: true]
  "roles" "text[]" [not null, default: `'{user}'::text[]`]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
}

Table "room_type" {
  "id" uuid [pk, not null, default: `public.uuid_generate_v4()`]
  "uid" uuid [not null]
  "name" varchar(255) [not null]
  "code" varchar(50) [unique, not null]
  "total_inventory" integer [not null, default: 1]
  "base_capacity" integer [not null]
  "max_capacity" integer [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
}

//========================================
// ENTIDAD CENTRAL - NUEVO MODELO OTA
//========================================

Table "daily_room_rates" {
  "id" uuid [pk, not null, default: `public.uuid_generate_v4()`]
  "uid" uuid [not null]
  "room_type_id" uuid [not null]
  "date" date [not null]
  "base_rate" decimal(10,2) [not null]
  "single_occupancy_rate" decimal(10,2)
  "extra_person_rate" decimal(10,2)
  "available_rooms" integer [not null, default: 0]
  "is_active" boolean [not null, default: true]
  "min_stay" integer
  "max_stay" integer
  "closed_to_arrival" boolean [not null, default: false]
  "closed_to_departure" boolean [not null, default: false]
  "last_updated_by" uuid
  "pricing_source" varchar(50)
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp

  Indexes {
    (room_type_id, date) [unique, name: "idx_daily_rates_main"]
    (date, is_active) [name: "idx_daily_rates_date_active"]
    (room_type_id, date, available_rooms) [name: "idx_daily_rates_availability"]
  }
}

//========================================
// SISTEMA DE PLANTILLAS - MANTENER
//========================================

Table "quote_template" {
  "id" uuid [pk, not null, default: `public.uuid_generate_v4()`]
  "uid" uuid [not null]
  "name" varchar(255) [not null]
  "description" text
  "is_default" boolean [default: false]
  "is_active" boolean [default: true]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
}

Table "content_block" {
  "id" uuid [pk, not null, default: `public.uuid_generate_v4()`]
  "uid" uuid [not null]
  "name" varchar(255) [not null]
  "content_type" varchar(50) [not null]
  "content" text [not null]
  "is_active" boolean [default: true]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
}

Table "quote_template_block" {
  "id" uuid [pk, not null, default: `public.uuid_generate_v4()`]
  "uid" uuid [not null]
  "quote_template_id" uuid [not null]
  "content_block_id" uuid [not null]
  "sort_order" integer [not null, default: 0]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "deleted_at" timestamp
}

//========================================
// REFERENCIAS Y RELACIONES
//========================================

Ref "FK_daily_room_rates_room_type": "room_type"."id" < "daily_room_rates"."room_type_id" [delete: restrict]

Ref "FK_quote_template_block_template": "quote_template"."id" < "quote_template_block"."quote_template_id" [delete: cascade]

Ref "FK_quote_template_block_content": "content_block"."id" < "quote_template_block"."content_block_id" [delete: cascade]

//========================================
// NOTAS TÉCNICAS
//========================================